# src/routes/commentRoutes.ts
@@ -1,19 +1,16 @@
 // src/routes/commentRoutes.ts
 import express, { Router } from 'express';
+import { isAuthenticated } from '../middlewares/authenticatication';
 import { CreateComment, getCommentsByBlogId, updateComment, deleteComment } from '../controllers/commentController';
 
 const router: Router = express.Router();
 
+router.post('/:id/comments',CreateComment);
 
-router.post('/:id/comments', CreateComment);
+router.get('/:id/comments',getCommentsByBlogId);
 
+router.put('/:id/comments', isAuthenticated,updateComment);
 
-router.get('/:id/comments', getCommentsByBlogId);
-
-
-router.put('/:id/comments', updateComment);
-
-
-router.delete('/:id/comments', deleteComment);
+router.delete('/:id/comments',isAuthenticated,deleteComment);
 
 export default router;
